--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,7 +33,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
     - name: Add parent directory to the PYTHONPATH
       run: |
-        export PYTHONPATH=${PYTHONPATH}:$(pwd)
+        export PYTHONPATH=${PYTHONPATH}:$(pwd)/..
     - name: Test with pytest
       run: |
         pytest
